# BDSP-Poffin-Factory

./: .gitignore  Berry-Data - Berry Data.csv  KillPython.bat  MANIFEST.in  README.md  _best_recipe.txt  _best_recipe_all.txt  berries-info.json  file.txt  install.bat  install_and_test.bat  new_best_recipe_all.txt  poffin_results_23-Jan-2022 07-23 AM.txt  pyproject.toml  requirements.txt  run.bat  setup.cfg  setup.py
make_poffins/: __init__.py  berry.py  berry_factory.py  berry_sorter.py  best_recipe.py  constants.py  contest_stats.py  cook_all_poffins.py  main.py  poffin.py  poffin_cooker.py  poffin_factory.py  poffin_gui.py  poffin_sorter.py  recipe_record.py  test.py
make_poffins/berry/: berry.py  berry_factory.py  berry_filter_interface.py  berry_library.py  berry_sort_and_filter_system.py  berry_sort_interface.py  berry_sorter.py  interface_berry_filter.py  interface_berry_sort.py
make_poffins/contest_stats/: contest_stats.py  contest_stats_factory.py  contest_stats_filter_interface.py  contest_stats_sort_and_filter_system.py  contest_stats_sort_interface.py
make_poffins/poffin/: interface_poffin_filter.py  interface_poffin_sort.py  poffin.py  poffin_cooker.py  poffin_factory.py  poffin_filter_interface.py  poffin_recipes.json  poffin_sort_and_filter_system.py  (+2 more)
tests/: conftest.py  test_berry.py  test_berry_factory.py  test_berry_sort.py  test_berry_sort_and_filter_system.py  test_combinations.py  test_multi_processpy  test_multithread.py  test_pickle.py  test_poffin.py  test_poffin_cooker.py  test_process_queue.py  test_stat_sort_and_filter_system.py
(+43 files in other folders)
