# In poffin_project/setup.cfg

[metadata]
# You can add more metadata here, but it's often inherited
# from pyproject.toml now. This file is mainly for setuptools options.

[options]
# This tells setuptools to look for your package in the root directory.
package_dir =
    = .

# This finds your 'make_poffins' package and all sub-packages automatically.
packages = find:
